--- a/apps/VoiceStaticServer/template/index.html
+++ b/apps/VoiceStaticServer/template/index.html
@@ -127,7 +127,7 @@
 
   <div class="VoiceStaticPanel" id="voiceStaticPanel">
     <div class="card-header">
-      <h5 class="mb-0">Voice Generation Status</h5>
+      <h5 class="mb-0">Voice Generation Status (<span id="role"></span>)</h5>
       <span id="voiceUpdateTime" class="badge">Last update: Never</span>
     </div>
     <div class="card-body">
@@ -147,7 +147,7 @@
             </div>
             <div class="stat-item">
               <span class="label">Valid Words:</span>
-              <span id="wordCount" class="value">-</span>
+              <span id="validCount" class="value">-</span>
             </div>
             <div class="stat-item">
               <span class="label">Completed:</span>
