--- a/apps/VoiceStaticServer/template/index.html
+++ b/apps/VoiceStaticServer/template/index.html
@@ -146,8 +146,8 @@
               <span id="wordTotalCount" class="value">-</span>
             </div>
             <div class="stat-item">
-              <span class="label">Valid Words:</span>
-              <span id="validCount" class="value">-</span>
+              <span class="label">Valid Voices:</span>
+              <span id="validVoiceCount" class="value">-</span>
             </div>
             <div class="stat-item">
               <span class="label">Completed:</span>
