--- a/apps/VoiceStaticServer/template/index.html
+++ b/apps/VoiceStaticServer/template/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/static/styles/index.css">
   <link rel="stylesheet" href="/static/styles/system_monitor_panel.css">
   <link rel="stylesheet" href="/static/styles/voice_static_panel.css">
+  <link rel="stylesheet" href="/static/styles/log-container.css">
 </head>
 
 <body>
@@ -197,7 +198,9 @@
     </div>
   </div>
 
-  <script src="/static/scripts/index.js"></script>
+  <script src="/static/scripts/interact.min.js"></script>
+  <script src="/static/scripts/log-console.js"></script>
+  <script src="/static/scripts/websocket-client.js"></script>
   <script src="/static/scripts/voice_status.js"></script>
 
 </body>
