--- a/ncore/utils/express/template/index.html
+++ b/ncore/utils/express/template/index.html
@@ -6,6 +6,7 @@
   <title>Express Server Running</title>
   <link rel="stylesheet" href="/static/styles/index.css">
   <link rel="stylesheet" href="/static/styles/system_monitor_panel.css">
+  <link rel="stylesheet" href="/static/styles/log-container.css">
 </head>
 <body>
 
@@ -123,8 +124,12 @@
   </div>
 
 
+  <script src="/static/scripts/interact.min.js"></script>
+  <script src="/static/scripts/log-console.js"></script>
+  <script src="/static/scripts/websocket-client.js"></script>
   <script src="/static/scripts/index.js"></script>
   <script src="/static/scripts/system_monitor.js"></script>
 
 </body>
 </html>
+
